# AR-Coordination-Platform

./: LICENSE  README.md
imu_publisher/: settings.gradle
imu_publisher/app/: build.gradle
remoteslam/: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  BME_Remote_Slam.sln  Unity.CollabProxy.Editor.csproj  Unity.Rider.Editor.csproj  Unity.TextMeshPro.Editor.csproj  Unity.TextMeshPro.csproj  Unity.Timeline.Editor.csproj  Unity.Timeline.csproj  Unity.VSCode.Editor.csproj  UnityEditor.TestRunner.csproj  UnityEngine.TestRunner.csproj  Unity_native_camera_plugin.Editor.csproj  Unity_native_camera_plugin.csproj  Unity_native_camera_plugin.sln
remoteslam/Assets/: WorldPlacer.cs
remoteslam/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
sia/: .gitignore  README.md  docker-compose.yaml  rovioli_LSD_diff.ods
sia/src/slam_img_analyzer/: CMakeLists.txt  package.xml
sia/src/slam_img_analyzer/calib/: LSD_letica.cfg  s10_imu.yaml
sia/src/slam_img_analyzer/calib/._1/: metadata
sia/src/slam_img_analyzer/calib/._1/vi_map/: edges  landmark_index  missions  sensors.yaml  vertices0
sia/src/slam_img_analyzer/launch/: decision_maker.xml  init.launch  lsd_slam.xml  rovioli.xml  svo.xml
sia/src/slam_img_analyzer/msg/: SlamPoseStamped.msg  StringStamped.msg
sia/src/slam_img_analyzer/src/: decision_maker.cpp  decision_node.cpp  decision_node.h  example_publisher.cpp
slam_accuracy/: .gitignore  README.md  evaluate_ate.py  main.py  robot_client_interface.xlsx
slam_accuracy_ML_models/: .gitignore  LICENSE  README.md  dnn_model_trained_best_rov.h5  extract_training_data.py  requirements.txt  ros_example.py  train_dnn.py  train_seq2seq_lstm.py  train_stacked_lstm.py  update_all.sh
slam_accuracy_ML_models/bags/: MH_01_easy_LSD.bag  MH_01_easy_ORB.bag  MH_01_easy_ROV.bag  MH_02_easy_ROV.bag  MH_03_medium_ORB.bag  MH_03_medium_ROV.bag  MH_04_difficult_LSD.bag  MH_04_difficult_ROV.bag  (+3 more)
(+152 files in other folders)
