<package format="2">
  <name>slam_img_analyzer</name>
  <version>1.2.4</version>
  <description>
  This package provides decision algorithm for SLAM.
  </description>
  <maintainer email="zsofia.solymosi.dev@gmail.com">Zsofia Kecskes-Solymosi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>